# langton

./: Ant.cpp  Ant.h  Breeder.cpp  Breeder.h  CMakeLists.txt  LICENSE  Queen.cpp  Queen.h  README.md  Soldier.cpp  Soldier.h  conf.txt  events.cpp  events.h  main.cpp
include/: Ant.h  Breeder.h  Queen.h  Soldier.h  events.h  globals.h  graphics.h
src/: Ant.cpp  Breeder.cpp  Queen.cpp  Soldier.cpp  events.cpp  graphics.cpp  main.cpp
